--- a/package.json
+++ b/package.json
@@ -18,16 +18,22 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.2",
+    "connect-flash": "^0.1.1",
+    "connect-redis": "^3.3.3",
+    "cookie-parser": "^1.4.3",
     "cors": "^2.8.4",
     "dropbox": "^4.0.3",
     "dropbox-fs": "^0.3.0",
+    "dropbox-stream": "^2.0.0",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
     "express-sessions": "^1.0.6",
     "googleapis": "^29.0.0",
-    "mongoose": "^5.0.16",
+    "mongodb": "^3.1.0-beta4",
+    "mongoose": "^5.1.3",
     "morgan": "^1.9.0",
     "node-cache": "^4.2.0",
+    "node-fs": "^0.1.7",
     "opn": "^5.3.0",
     "redis": "^2.8.0",
     "request": "^2.85.0",
